--- a/visa.html
+++ b/visa.html
@@ -8,6 +8,9 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
+            background-image: url('https://tse1.mm.bing.net/th?id=OIP.XHm1c7wvzsG7ntjBBt5omQHaE8&pid=Api&P=0&h=180');
+            background-size: cover;
+            background-position: center;
             margin: 0;
             padding: 0;
             display: flex;
@@ -17,7 +20,7 @@
         }
 
         .container {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.8); 
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -126,4 +129,5 @@
     </script>
 </body>
 </html>
+
 
