--- a/visa.html
+++ b/visa.html
@@ -6,7 +6,7 @@
     <title>Visa Requirement Checker</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-style:italic;
             background-color: #f4f4f9;
             background-image: url('https://tse1.mm.bing.net/th?id=OIP.XHm1c7wvzsG7ntjBBt5omQHaE8&pid=Api&P=0&h=180');
             background-size: cover;
